Gemini>summary & Groq>transcription

--- a/static/styles/index2.css
+++ b/static/styles/index2.css
@@ -96,3 +96,13 @@ a:hover {
   border-color: #ccc;
   cursor: not-allowed;
 }
+
+pre {
+  border: 1px solic #ccc;
+  padding: 10px;
+  background-color: #2b2b2b;
+  border-radius: 5px;
+  overflow: auto;
+  color: antiquewhite;
+  font-family: "Garamond", serif;
+}
